correction de fautes d'orthographe

--- a/misc/appendix.tex
+++ b/misc/appendix.tex
@@ -69,7 +69,7 @@ EVENTS {
         {Description} \\
         \hline
         \hline
-        Deadline & Simple & Conçu pour régler les problèmes de famine aperçu 
+        Deadline & Simple & Conçu pour régler les problèmes de famine aperçus 
         dans d'autres ordonnanceurs à l'époque. Son algorithme utilise 3 files, 
         à savoir une file dite ``triée'' (par priorité), une file de lecture et 
         une file d'écriture. Les requêtes de la file triée sont prioritaires et 
@@ -98,7 +98,7 @@ EVENTS {
         \hline
         Kyber & Multiple & Créé pour les périphériques multi-files rapides 
         comme les disques SSD ou les cartes \texttt{M.2} par exemple. Il reste 
-        relativement simple et distribue les requêtes dans deux files : celle 
+        relativement simple et distribu les requêtes dans deux files : celle 
         des lectures et celle des écritures. Grâce à sa limitation du nombre de 
         requêtes pouvant être traitées à la fois, Kyber offre un temps de 
         service rapide pour les requêtes à haute priorités \cite{Kyber}. Il 
