--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -31,7 +31,7 @@ enseignants chercheurs.
 \subsection{Environement de travail}
 
 Mon employeur officiel reste donc l'université, c'est-à-dire l'UGA. Mon équipe 
-et moi-même étions localisé sur le campus, plus précisément dans le bâtiment 
+et moi-même étions localisés sur le campus, plus précisément dans le bâtiment 
 ``IMAG'', au quatrième étage consacré à la recherche dans le domaine 
 informatique. Au début du stage, le mode de travail en présentiel m'était 
 interdit par le labo à cause de la situation sanitaire liée à la Covid. Puis 
