--- a/report.tex
+++ b/report.tex
@@ -103,6 +103,14 @@
   numbersep=1em,xleftmargin=2em,
   literate= *{\%}{{{\color{orange}\%}}}1
 }
+\lstdefinestyle{customShell}{
+  language=sh,
+  showspaces=false,
+  showstringspaces=false,
+  basicstyle=\tiny\ttfamily,
+  comment=[l]{\#},
+  commentstyle={\color{blue!60!black}\itshape},
+}
 
 % Pour toutes caractéristiques du texte dans le rapport
 \singlespacing
