--- a/misc/appendix.tex
+++ b/misc/appendix.tex
@@ -125,7 +125,7 @@ EVENTS {
 \begin{figure}[h!t]
     \centering
     \begin{tabular}{c}
-        \begin{lstlisting}[style=customShell]
+        \begin{lstlisting}[style=customShell, linewidth=0.9\textwidth]
 #!/usr/bin/env bash
 sudo apt-get install -y flex bison libelf-dev openssl libssl-dev parted qemu-kvm qemu make
 
